--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/*=======================================================================
+
+/*========================================================================
 
 DEFAULT VALUES:
 
@@ -10,34 +11,89 @@ Blue Bayoux	  : #64707b (Paragraphs)
 White		  : #fff (Text With Black Backgrounds)
 Black 		  : #000
 
-
-
 ==========================================================================*/
+
+/* General CSS */
+
+html,
+body {
+
+    height: 100%;
+}
 
 body {
 
-	font-family: "Roboto Condensed", "sans-serif";
-	color: #34c6d3;
-	margin: auto;
+    font-family: "Roboto Condensed", "sans-serif";
+    color: #34c6d3;
 }
 
-.col-1 {
+h3 {
 
-	background-color: red;
+    text-transform: uppercase;
 }
 
-.col-2 {
+/*========================================================================
+HOME
+==========================================================================*/
 
-	background-color: green;
+#home {
+
+    height: 100%;
 }
 
-.col-3 {
+#home-cover {
 
-	background-color: blue;
+    background-image: url("../img/bg-home.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
 }
 
-.col-4 {
+#home-content-box {
 
-	background-color: yellow;
+    width: 100%;
+    height: 100%;
+    display: table;
 }
 
+#home-content-box-inner {
+
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+#home-heading h3 {
+
+    color: #fff;
+    font-size: 55px;
+    font-weight: 700;
+    margin: 20px 0 20px 0;
+}
+
+/*========================================================================
+Button (generic)
+==========================================================================*/
+
+.btn-general {
+
+	border-width: 2px;
+	border-radius: 0;
+	padding: 12px 26px 12px 26px;
+	font-size: 16px;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.btn-white {
+
+	border-color: #fff;
+	color: #fff;
+}
+
+.btn-white:hover, .btn-white:focus {
+	
+	background-color: #fff;
+	color: #41464b;
+}
