--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,23 @@ body {
 body {
 
     font-family: "Roboto Condensed", "sans-serif";
-    color: #34c6d3;
+}
+
+p {
+
+    color: #64707b;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 h3 {
 
     text-transform: uppercase;
+    color: #41464b;
 }
 
 /*========================================================================
-HOME
+HOME SECTION
 ==========================================================================*/
 
 #home {
@@ -70,6 +77,47 @@ HOME
 }
 
 /*========================================================================
+SERVICES SECTION
+==========================================================================*/
+
+.service-item {
+
+    padding: 20px 0 20px 0;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.service-item:hover .service-item-icon {
+
+    color: #fff;
+    background-color: #34c6d3;
+}
+
+.service-item-title h3 {
+
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 0 10px 0;
+}
+
+.service-item-icon {
+
+    color: #34c6d3;
+    float: left;
+    padding: 15px;
+    margin-right: 25px;
+    width: 75px;
+    height: 75px;
+    text-align: center;
+}
+
+.service-item-desc p {
+
+    margin: 0;
+    padding-left: 85px;
+}
+
+/*========================================================================
 ANIMATION 
 ==========================================================================*/
 #home-cover,
@@ -95,7 +143,30 @@ ANIMATION
     animation-delay: 1s;
 }
 
+/*========================================================================
+CONTENT (generic)
+==========================================================================*/
 
+.content-box {
+
+    padding: 60px 0 60px 0;
+}
+
+.content-title h3 {
+    
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 0 30px 0;
+}
+
+.content-title-underline {
+
+    width: 50px;
+    height: 3px;
+    background-color: #34c6d3;
+    margin: 0 auto 30px auto;
+}
 
 /*========================================================================
 PARALLAX (generic)
