--- a/css/style.css
+++ b/css/style.css
@@ -100,15 +100,12 @@ SERVICES SECTION
     margin: 0 0 10px 0;
 }
 
-.service-item-icon {
+.service-item-icon  {
 
     color: #34c6d3;
     float: left;
     padding: 15px;
     margin-right: 25px;
-    width: 75px;
-    height: 75px;
-    text-align: center;
 }
 
 .service-item-desc p {
@@ -116,6 +113,58 @@ SERVICES SECTION
     margin: 0;
     padding-left: 85px;
 }
+
+/*========================================================================
+ABOUT SECTION
+==========================================================================*/
+
+#about-bg-diagonal {
+    
+    float: right;
+    height: 700px;
+    width: 60%;
+    background-image: url("../img/bg-about.jpg");
+    border-left: 200px solid white;
+    border-top: 700px solid transparent;
+}
+
+
+#about-content-box {
+
+    float: left;
+    height: 700px;
+}
+
+#about-content-box-outer {
+
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+
+#about-content-box-inner {
+
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#about .content-title h3 {
+
+    text-align: left;
+}
+
+#about .content-title-underline {
+
+    margin: 0 0 30px 0;
+}
+
+#about-desc p {
+
+    margin-bottom: 30px;
+}
+
+
+
 
 /*========================================================================
 ANIMATION 
@@ -205,4 +254,16 @@ BUTTONS (generic)
 	
 	background-color: #fff;
 	color: #41464b;
+}
+
+.btn-blue {
+
+    border-color: #34c6d3;
+    color: #34c6d3;
+}
+
+.btn-blue:hover, .btn-blue:focus {
+    
+    background-color: #34c6d3;
+    color: #fff;
 }
