working on magnific popup function

--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,31 @@ ABOUT SECTION
 }
 
 
+/*========================================================================
+WORK SECTION
+==========================================================================*/
+
+.no-gutters [class*=col-] {
+
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.img-wrapper {
+
+    overflow: hidden;
+}
+
+.img-wrapper img {
+
+    transition: transform .5s ease;
+}
+
+.img-wrapper img:hover {
+
+    transform: scale(1.5);
+}
+
 
 
 /*========================================================================
