working on team-members section

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ PARALLAX (generic)
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    /* parallax */
     background-attachment: fixed;
 }
 
