--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,6 @@ ABOUT SECTION
 
 #about-content-box-outer {
 
-    width: 100%;
     height: 100%;
     display: table;
 }
@@ -226,7 +225,7 @@ SOCIAL ICONS (generic)
 
 .social-list {
 
-    padding-left: 0;
+    padding: 0;
     margin-top: 25px;
 }
 
@@ -234,9 +233,7 @@ SOCIAL ICONS (generic)
 
     list-style: none;
     display: inline-block;
-    width: 32px;
-    height: 32px;
-    margin-right: 6px;
+    margin-right: 10px;
 }
 
 .icon-gray {
@@ -280,7 +277,7 @@ CONTENT (generic)
 
 .content-box {
 
-    padding: 60px 0 60px 0;
+    padding: 60px 0;
 }
 
 .content-title h3 {
@@ -296,7 +293,7 @@ CONTENT (generic)
     width: 50px;
     height: 3px;
     background-color: #34c6d3;
-    margin: 0 auto 30px auto;
+    margin: 0 auto 30px;
 }
 
 /*========================================================================
@@ -321,7 +318,7 @@ BUTTONS (generic)
 
 	border-width: 2px;
 	border-radius: 0;
-	padding: 12px 26px 12px 26px;
+	padding: 12px 26px;
 	font-size: 16px;
 	font-weight: 400;
 	text-transform: uppercase;
