finished clients section

--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,16 @@ STATS SECTION
     margin-top: 0;
 }
 
+/*========================================================================
+CLIENTS SECTION
+==========================================================================*/
+
+.client {
+
+    padding: 40px 0;
+
+}
+
 
 
 /*========================================================================
