--- a/css/style.css
+++ b/css/style.css
@@ -409,10 +409,61 @@ CLIENTS SECTION
 .client {
 
     padding: 40px 0;
-
 }
 
+/*========================================================================
+CONTACT SECTION
+==========================================================================*/
+footer {
 
+    background-color: #41464b;
+    padding-top: 30px; 
+    border-top: 5px solid rbga(0,0,0, 0.1);
+}
+
+#contact-left h3 {
+
+    color: #fff;
+    font-size: 27px;
+    font-weight: 700;
+}
+
+#contact-left p {
+
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+#contact-info {
+
+    background-image: url("../img/world-map.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+address {
+
+    color: #fff; 
+}
+
+address strong, 
+#phone-fax-email strong {
+
+    letter-spacing: 1px;
+}
+
+form .form-control {
+
+    background: transparent;
+    border-radius: 0;
+    border-color: #fff;
+    font-size: 17px;
+    font-weight: 300;
+    padding: 8px 16px;
+    margin-bottom: 20px;
+    color: #fff;
+
+}
 
 /*========================================================================
 SOCIAL ICONS (generic)
@@ -428,12 +479,17 @@ SOCIAL ICONS (generic)
 
     list-style: none;
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .icon-gray {
 
     color: #41464b;
+}
+
+.icon-white {
+
+    color: #fff;
 }
 
 .social-icon:hover {
