--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 /*========================================================================
 
-DEFAULT VALUES:
+CUSTOM VALUES:
 
 Font Family: Roboto Condensed
 
@@ -46,9 +46,10 @@ NAVIGATION
 .navbar {
 
     padding: 20px 0;
+    transition: all .5s ease-in-out;
 }
 
-.vesco-top-nav {
+.custom-nav {
 
     background: rgba(0,0,0,0.7);
     padding: 7px 0;
@@ -96,6 +97,12 @@ NAVIGATION
 
     max-height: none !important;
 }
+
+.custom-nav ul.navbar-nav > li.active > a {
+
+    color: #34c6d3;
+}
+
 /*========================================================================
 HOME SECTION
 ==========================================================================*/
