finished navigation, added smooth scrool, added back-to-top botton

--- a/css/style.css
+++ b/css/style.css
@@ -716,3 +716,14 @@ BUTTONS (generic)
     background-color: #34c6d3;
     color: #fff;
 }
+
+.btn-back-to-top {
+
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 22px;
+    padding: 3px 15px;
+    border-radius: 0;
+    display: none;
+}
