--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,14 +3,12 @@ Bootstrap 3 Media Queries
 ==========================================================================*
 
 /* Large Devices (Desktops & Laptops) */
-
 @media (min-width: 1200px) {
 
 	/* No Changes Required*/
 }
 
 /* Medium Devices (Landscape Tablets & Medium Desktops) */
-
 @media (min-width: 992px) and (max-width: 1199px) {
 	
 	/* mobile menu */
@@ -29,15 +27,55 @@ Bootstrap 3 Media Queries
 
 		padding: 0;
 	}
-
-
 }
 
 /* Small Devices (Portrait Tablets & Small Desktops) */
-
 @media (min-width: 768px) and (max-width: 991px) {
 
+	/* mobile menu */
+	.navbar {
 
+		background: rgba(0,0,0, .7);
+		padding: 0;
+	}
+
+	.navbar-nav {
+
+		float: left;
+	}
+
+	.vesco-nav-wrapper {
+
+		padding: 0;
+	}
+
+	/* ABOUT SECTION */
+	#about-bg-diagonal {
+
+		border-left: 0;
+		border-top: 0;
+		width: 100%;
+		height: 350px;
+	}
+
+	#about-content-box {
+
+		width: 100%;
+		height: 350px;
+	}
+
+	/* STATS SECTION */
+	.stats-item {
+
+		padding: 20px 0;
+	}
+
+	/* FOOTER */
+
+	#footer-copyrights {
+
+		text-align: center;
+	}
 }
 
 /* Extra-Small Devices (Landscape Phones & Portrait Tablets) */
