--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,34 @@ Black 		  : #000
 
 ==========================================================================*/
 
-/* General CSS */
+
+
+/*========================================================================
+GENERAL RULES
+==========================================================================*/
+
+/* Brand Name */
+
+#color-one {
+
+    color: #D81159;
+}
+#color-two {
+
+    color: #6DC954;
+}
+#color-three {
+
+    color: #FBB13C;
+}
+#color-four {
+
+    color: #1BB9E5;
+}
+#color-five {
+
+    color: #ABFF4F;
+}
 
 html,
 body {
@@ -42,6 +69,19 @@ h3 {
 /*========================================================================
 NAVIGATION
 ==========================================================================*/
+
+.navbar-brand {
+
+    padding-top: 12px;
+}
+
+.navbar-brand h3 {
+
+    color: white;
+    font-weight: 700;
+    font-size: 30px;
+    margin: 0;
+}
 
 .navbar {
 
@@ -147,7 +187,7 @@ SERVICES SECTION
 
 .service-item {
 
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
     margin-bottom: 20px;
     cursor: pointer;
 }
@@ -248,13 +288,12 @@ WORK SECTION
     transition: -webkit-transform .5s ease;
     transition: transform .5s ease;
     transition: transform .5s ease, -webkit-transform .5 ease;
-    
 }
 
 .img-wrapper img:hover {
     
     -webkit-transform: scale(1.5);
-    transform: scale(1.5);
+    transform: scale(1.3);
     cursor: zoom-in;
 }
 
@@ -268,7 +307,7 @@ TEAM SECTION
 
 .team-member-info {
 
-    padding: 10px 0 30px 0;
+    padding: 10px 0 30px;
 }
 
 h4.team-member-name {
@@ -653,7 +692,7 @@ ANIMATION
 }
 
 /*========================================================================
-CONTENT (generic)
+CONTENT-BOX (generic)
 ==========================================================================*/
 
 .content-box {
@@ -688,7 +727,6 @@ PARALLAX (generic)
 
 .bg-parallax {
     
-    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     /* parallax */
@@ -737,8 +775,8 @@ BUTTONS (generic)
 .btn-back-to-top {
 
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 10px;
+    right: 10px;
     font-size: 22px;
     padding: 3px 15px;
     border-radius: 0;
