--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,30 +3,14 @@ Bootstrap 3 Media Queries
 ==========================================================================*
 
 /* Large Devices (Desktops & Laptops) */
-@media (min-width: 1200px) and (max-width: 1289px) {
-
-	/* mobile menu */
-	.navbar {
-
-		background: rgba(0,0,0, .8);
-		padding: 0;
-	}
-
-	.navbar-nav {
-
-		float: left;
-	}
-
-	.vesco-nav-wrapper {
-
-		padding: 0;
-	}
+@media (min-width: 1200px) {
 
 	/* Back-to-Top Button (FOOTER) */
+
 	#back-to-top {
 
-		bottom: 15px;
-		right: 15px;
+		bottom: 10px;
+		right: 10px;
 	}
 }
 
@@ -34,9 +18,10 @@ Bootstrap 3 Media Queries
 @media (min-width: 992px) and (max-width: 1199px) {
 	
 	/* mobile menu */
+
 	.navbar {
 
-		background: rgba(0,0,0, .8);
+		background: rgba(0,0,0, .7);
 		padding: 0;
 	}
 
@@ -45,12 +30,13 @@ Bootstrap 3 Media Queries
 		float: left;
 	}
 
-	.vesco-nav-wrapper {
+	.tetra-nav-wrapper {
 
 		padding: 0;
 	}
 
 	/* Back-to-Top Button (FOOTER) */
+
 	#back-to-top {
 
 		bottom: 10px;
@@ -65,7 +51,7 @@ Bootstrap 3 Media Queries
 
 	.navbar {
 
-		background: rgba(0,0,0, .8);
+		background: rgba(0,0,0, .7);
 		padding: 0;
 	}
 
@@ -74,7 +60,7 @@ Bootstrap 3 Media Queries
 		float: left;
 	}
 
-	.vesco-nav-wrapper {
+	.tetra-nav-wrapper {
 
 		padding: 0;
 	}
@@ -108,14 +94,6 @@ Bootstrap 3 Media Queries
 
 		text-align: center;
 	}
-
-	/* Back-to-Top Button (FOOTER) */
-
-	#back-to-top {
-
-		bottom: 3px;
-		right: 3px;
-	}
 }
 
 /* Extra-Small Devices (Landscape Phones & Portrait Tablets) */
@@ -125,7 +103,7 @@ Bootstrap 3 Media Queries
 
 	.navbar {
 
-		background: rgba(0,0,0, .8);
+		background: rgba(0,0,0, .7);
 		padding: 0;
 	}
 
@@ -134,7 +112,7 @@ Bootstrap 3 Media Queries
 		float: left;
 	}
 
-	.vesco-nav-wrapper {
+	.tetra-nav-wrapper {
 
 		padding: 0;
 	}
@@ -209,26 +187,11 @@ Bootstrap 3 Media Queries
 
 		text-align: center;
 	}
-
-	/* Back-to-Top Button (FOOTER) */
-
-	#back-to-top {
-
-		bottom: 3px;
-		right: 3px;
-	}
 }
 
 /* Extra-Small Devices (Smaller Devices) */
 @media (max-width: 480px) {
 
-	/* Back-to-Top Button (FOOTER) */
-
-	#back-to-top {
-
-		bottom: 3px;
-		right: 3px;
-	}
 }
 
 /* Extra-Small Devices (Smaller Devices) */
@@ -280,13 +243,4 @@ Bootstrap 3 Media Queries
 
 		right: 5px;
 	}
-
-	/* Back-to-Top Button (FOOTER) */
-
-	#back-to-top {
-
-		bottom: 3px;
-		right: 3px;
-	}
-
 }
