css change to form-control class when in focus

--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,11 @@ form .form-control {
     color: #fff;
 }
 
+.form-control:focus {
+    
+    border-color: #34c6d3;
+}
+
 /*========================================================================
 FOOTER-BOTTOM
 ==========================================================================*/
